# libcoqcic

./: .gitignore  AUTHOR  Makefile.in  Makefile.macros  Makefile.rules  Makefile.targets  README.md  configure.in  coq-sexpressions.md  doxygen.conf  libcoqcic.pc.in
coq/: export_sexpr_plugin.mlg
coqcic/: constr.cc  constr.h  constr_test.cc  debruijn.cc  fix_specialize.cc  fix_specialize.h  fix_specialize_test.cc  from_sexpr.cc  from_sexpr.h  from_sexpr_test.cc  lazy_stack.h  lazy_stack_test.cc  lazy_stackmap.h  lazy_stackmap_test.cc  mainpage.cc  minigallina.cc  minigallina.h  minigallina_test.cc  normalize.cc  normalize.h  normalize_test.cc  parse_result.h  parse_sexpr.cc  parse_sexpr.h  parse_sexpr_test.cc  sexpr.cc  sexpr.h  sexpr_parser_sample.cc  sfb.cc  sfb.h  shared_stack.h  shared_stack_test.cc  simpl.cc  simpl.h  simpl_test.cc  to_sexpr.cc  to_sexpr.h  to_sexpr_test.cc  visitor.cc  visitor.h
debian/: changelog  control  copyright  libcoqcic-dev.install  libcoqcic0.install
