# Process this file with autoconf to produce a configure script.
PACKAGE=libcoqcic

AC_INIT(src, 0.0.1, hcb@chaoticmind.net)
AC_CONFIG_SRCDIR(.)

VERSION=0.0.1

AC_CANONICAL_HOST
case "$host_os" in
	darwin*) PORTNAME=darwin ;;
	linux*) PORTNAME=linux ;;
	freebsd*) PORTNAME=freebsd ;;
esac
AC_SUBST(PORTNAME)

AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_ENABLE(no-shared,[  --enable-no-shared        Disable shared library build of libcoqcic],[ENABLE_SHARED=no],[ENABLE_SHARED=yes])

AC_ARG_ENABLE(coverage,[  --enable-coverage       Enable test coverage computation],[ENABLE_COVERAGE=yes],[])

AC_SUBST(VERSION)
AC_SUBST(ENABLE_SHARED)
AC_SUBST(ENABLE_COVERAGE)

# Generate output files
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([libcoqcic.pc])
AC_OUTPUT
